Clean up some comments.

--- a/custom.org
+++ b/custom.org
@@ -1340,14 +1340,18 @@ function.
 
 ** Key Bindings
 
-   =term-raw-map= is used in char mode.  =term-mode-map= is used in line mode.
+   =term-raw-map= is used in /char/ mode.
 
    #+BEGIN_SRC emacs-lisp
      (require 'smex)
 
      (define-key term-raw-map (kbd "M-x") 'smex)
      (define-key term-raw-map (kbd "M-h") 'backward-kill-word)
+   #+END_SRC
 
+   =term-mode-map= is used in /line/ mode.
+
+   #+BEGIN_SRC emacs-lisp
      (define-key term-mode-map (kbd "M-x") 'smex)
    #+END_SRC
 
@@ -1418,8 +1422,9 @@ function.
 
 * winner-mode
 
+  Remember window configurations.
+
   #+BEGIN_SRC emacs-lisp
-    ;; Remember window configurations.
     (require 'winner)
 
     (winner-mode)
