Add ido requirement.

--- a/custom.org
+++ b/custom.org
@@ -1286,6 +1286,8 @@ function.
    pads for.
 
    #+BEGIN_SRC emacs-lisp
+     (require 'ido)
+
      (defconst k20e/scratch-buffer-modes
        '(emacs-lisp-mode
          fundamental-mode
