Add Javascript mode to quick scratch buffers.

--- a/custom.org
+++ b/custom.org
@@ -1312,6 +1312,7 @@ function.
      (defconst k20e/scratch-buffer-modes
        '(emacs-lisp-mode
          fundamental-mode
+         javascript-mode
          sql-mode
          text-mode)
        "Common major modes to create scratch buffers for.")
