--- a/custom.org
+++ b/custom.org
@@ -1053,13 +1053,13 @@ function.
               :base-directory ,(expand-file-name "source" (expand-file-name "k20e" org-directory))
               :base-extension "org"
               :recursive t
-              :exclude "ga.org\\|level-0.org"
+              :exclude "ga.org\\|level-0.org\\|todo.org"
               :publishing-directory ,(expand-file-name "published" (expand-file-name "k20e" org-directory))
               :publishing-function org-html-publish-to-html
               :with-planning t)
              ("k20e-static-files"
               :base-directory ,(expand-file-name "source" (expand-file-name "k20e" org-directory))
-              :base-extension "png\\|ico"
+              :base-extension "jpg\\|png\\|ico"
               :recursive t
               :publishing-directory ,(expand-file-name "published" (expand-file-name "k20e" org-directory))
               :publishing-function org-publish-attachment)
