Use ido-find-file in ibuffer.

--- a/custom.org
+++ b/custom.org
@@ -722,6 +722,7 @@ function.
 
   #+BEGIN_SRC emacs-lisp
     (require 'ibuffer)
+    (require 'ido)
 
     (defalias 'list-buffers 'ibuffer)
 
@@ -738,7 +739,11 @@ function.
                              " "
                              name)))
 
-    (add-hook 'ibuffer-hook (lambda () (ibuffer-switch-to-saved-filter-groups "")))
+    (defun k20e/ibuffer-hook ()
+      (ibuffer-switch-to-saved-filter-groups "")
+      (define-key ibuffer-mode-map (kbd "C-x C-f") 'ido-find-file))
+
+    (add-hook 'ibuffer-hook 'k20e/ibuffer-hook)
   #+END_SRC
 
 * ido
