--- a/custom.org
+++ b/custom.org
@@ -98,6 +98,7 @@ function.
    #+BEGIN_SRC emacs-lisp
      (global-set-key (kbd "C-c DEL") 'join-line)
      (global-set-key (kbd "C-h") 'delete-backward-char)
+     (global-set-key (kbd "C-S-h") 'kill-whole-line)
      (global-set-key (kbd "C-j") 'join-line)
      (global-set-key (kbd "C-x C-t") 'toggle-frame-fullscreen)
      (global-set-key (kbd "H-h") 'help-command)
